trunk/Archive2/4c/c7f1b1d08ac1ce/main.cpp
struct encoder_t {
    
} const encoder = {};

struct validator_t {
    
} const validator = {};

struct test {
    
    template <typename Range, typename Encoding, typename Validation>
    test ( Range&& range, Encoding&& encoding = encoder, Validation&& validation = validator ) {
        
    }
    
};

int main() {
    
    test( "woof" );
    
}